# backend/docs/swagger.json
@@ -990,10 +990,8 @@
                 },
                 "specializeddiag": {
                     "description": "Specializeddiag holds the value of the specializeddiag edge.",
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/ent.Specializeddiag"
-                    }
+                    "type": "object",
+                    "$ref": "#/definitions/ent.Specializeddiag"
                 }
             }
         },
